<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KodiBuildsTV</string>
    <string name="ezzer">ezzer</string>
    <string name="crew">crew</string>
    <string name="doomzday">doomzday</string>
    <string name="nolimits">nolimits</string>
    <string name="cman">cman</string>
    <string name="download_kodi_arm64_v8a">Download Kodi Arm64-v8a</string>
    <string name="download_kodi_armeabi_v7a">Download Kodi Armeabi-v7a</string>
    <string name="read_me">Read Me</string>

    <string name="kodibuildstvbanner">kodibuildstvbanner</string>

    <string name="more_builds">More Builds</string>
    <string name="builds">Builds</string>
    <string name="image">image</string>

    <string name="main_menu">Main Menu</string>
    <string name="https_whizkid_one_wizard_repository_whizkid_1_1_0_zip_streamline">repository.WhizKid-1.1.0.zip  (Streamline)</string>
    <string name="https_teamfalcon_exposed_wizard_plugin_program_teamfalcon_zip_xontech">plugin.program.teamfalcon.zip  (Xontech)</string>
    <string name="https_dabutcher_org_repo_repository_dab_1_2_zip_da_butcher">repository.dab-1.2.zip  (Da Butcher)</string>
    <string name="https_kepler_22_github_io_repository_innovation_1_7_zip_innovation_builds">repository.innovation-1.7.zip  (Innovation Builds)</string>
    <string name="https_insanity_builds_tk_fracturedrepo_repository_fracturedrepo_0_2_7_zip_joker">repository.fracturedrepo-0.2.7.zip  (Joker)</string>
    <string name="https_thebeastbuild_com_download_thebeast_repostiroy_zip_da_beast">thebeast.repostiroy.zip  (Da Beast)</string>
    <string name="https_pedrokingdom_com_repo_repository_lk_1_1_zip_last_kingdom">repository.lk-1.1.zip  (Last Kingdom)</string>
    <string name="https_myatom_one_absolutionbuilds_repository_chainsrepo_0_0_1_zip_fire_and_ice_chains">repository.chainsrepo-0.0.1.zip  (Fire and Ice, Chains)</string>
    <string name="https_luxurywizard_space_luxury_repository_luxury_1_6_zip_blue_magic">repository.luxury-1.6.zip  (Blue Magic)</string>
    <string name="https_www_lostkodi_appboxes_co_plugin_program_lostbuildswizard_zip_kryptikz">plugin.program.lostbuildswizard.zip  (Kryptikz)</string>
    <string name="https_www_midian_appboxes_co_repo_repository_wherethemonsterslive_zip_badazz">repository.Wherethemonsterslive.zip  (Badazz)</string>
    <string name="https_twistedbuilds_xyz_repo_repository_twisted_1_0_zip_twisted_builds">repository.twisted-1.0.zip  (Twisted Builds)</string>
    <string name="button">Button</string>
    <string name="repository_supremebuilds_1_0_2_zip_titanium">repository.supremebuilds-1.0.2.zip (Titanium)</string>
    <string name="repository_racooncity_1_0_0_zip">repository.racooncity-1.0.0.zip</string>
    <string name="repository_racooncity_1_0_0_zip_resident_evil">repository.racooncity-1.0.0.zip (Resident Evil)</string>
    <string name="these_repositories_use_insecure_protocol_http_use_only_if_you_understand_the_risks">These repositories use insecure protocol http. Use only if you understand the risks.</string>
    <string name="title_activity_main3">Leanback Title</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="menu3">menu3</string>
    <string name="repository_misfitmods_zip_misfitmods">repository.misfitmods.zip (MisFitMods)</string>
    <string name="repository_grindhousekodi_1_7_zip_grindhouse">repository.grindhousekodi-1.7.zip (Grindhouse)</string>
    <string name="repository_racooncity_1_0_0_zip_planetarium">repository.racooncity-1.0.0.zip (Planetarium)</string>
    <string name="plugin_program_sdwiz_zip_bk_nox">plugin.program.sdwiz.zip (Bk Nox)</string>
    <string name="plugin_program_lostbuildswizard_zip_mach_lite">plugin.program.lostbuildswizard.zip (Mach Lite)</string>
    <string name="plugin_program_blazinstreams_zip_the_blaze">plugin.program.blazinstreams.zip (The Blaze)</string>
    <string name="repository_narcacistwizard_zip_green_monster">repository.NarcacistWizard.zip (Green Monster)</string>
    <string name="repository_ghettorepo_0_0_1_zip_beats">repository.ghettorepo-0.0.1.zip (Beats)</string>
    <string name="plugin_program_mbwiz_zip_silvo">plugin.program.mbwiz.zip (Silvo)</string>
    <string name="plugin_program_sdwiz_zip_duffman_reloaded">plugin.program.sdwiz.zip (Duffman Reloaded)</string>
    <string name="https_defcon_one_tk_fracturedrepo_repository_fracturedrepo_0_3_0_zip">https://defcon-one.tk/fracturedrepo/repository.fracturedrepo-0.3.0.zip</string>
    <string name="repository_fracturedrepo_0_3_0_zip">repository.fracturedrepo-0.3.0.zip</string>
    <string name="repository_fracturedrepo_0_3_0_zip_joker">repository.fracturedrepo-0.3.0.zip (Joker)</string>
    <string name="repository_racooncity_1_0_2_zip_resident_evil">repository.racooncity-1.0.2.zip (Resident Evil)</string>
    <string name="slamious_repo_zip_slamious">Slamious Repo.zip (Slamious)</string>
    <string name="https_www_lostkodi_appboxes_co_plugin_program_lostbuildswizard_zip_lostkodi">https://www.lostkodi.appboxes.co/plugin.program.lostbuildswizard.zip(LostKodi)</string>
    <string name="plugin_program_lostbuildswizard_zip_lostkodi">plugin_program_lostbuildswizard_zip_lostkodi</string>
    <string name="repository_ghettorepo_0_0_3_zip_gheto">repository.ghettorepo-0.0.3.zip(Gheto)</string>
    <string name="repository_fracturerepo_0_5_6_zip_joker">repository.fracturerepo-0.5.6.zip (Joker)</string>
    <string name="repository_gaia_zip_gaia">repository.gaia.zip (Gaia)</string>
    <string name="repository_supremebuilds_1_0_2_zip_titanium_titanium">repository_supremebuilds_!_0_2_zip_titanium (Titanium)</string>
    <string name="magneticrepo">magneticrepo</string>
    <string name="cmanxml">cmanxml</string>
    <string name="todo">cman</string>
    <string name="diggz_repo_zip_diggz">Diggz_Repo.zip (Diggz)</string>
    <string name="repository_grindhousekodi_1_8_zip_grindhouse">repository.grindhousekodi-1.8.zip (Grindhouse)</string>
    <string name="repository_709_1_0_nexus_zip_estuary_switch">repository.709-1.0-Nexus.zip (Estuary Switch)</string>
    <string name="repository_gaia_full_zip_gaia">repository.gaia.full.zip (Gaia)</string>
    <string name="https_dabutcher_org_repo_repository_dab_1_5_zip_dabutcher">https://dabutcher.org/repo/repository.dab-1.5.zip (DaButcher)</string>
    <string name="repository_dab_1_5_zip_dabutcher">repository.dab-1.5.zip (DaButcher)</string>
    <string name="repository_streamdigital_2_0_zip_stream_digital">repository.streamdigital-2.0.zip (Stream Digital)</string>
    <string name="repository_exodusredux_0_0_8_zip_exodus">repository.exodusredux-0.0.8.zip (Exodus)</string>
    <string name="repository_covenant_0_1_zip_covenant">repository.covenant-0.1.zip (Covenant)</string>

</resources>