<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/kodibanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:contentDescription="@string/kodibuildstvbanner"
        android:src="@drawable/biganner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/thecrew"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="70dp"
        android:background="@null"
        android:contentDescription="@string/crew"
        android:padding="20dp"
        android:src="@drawable/thecrewxml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/doomzday"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="130dp"
        android:background="@null"
        android:contentDescription="@string/doomzday"
        android:padding="20dp"
        android:src="@drawable/doomzdayxml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/magneticrepo"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="190dp"
        android:background="@null"
        android:contentDescription="@string/magneticrepo"
        android:padding="20dp"
        android:src="@drawable/magneticrepoxml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ezzer"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="250dp"
        android:background="@null"
        android:contentDescription="@string/ezzer"
        android:padding="20dp"
        android:src="@drawable/ezzerxml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ezzerxml" />

    <ImageButton
        android:id="@+id/nolimits"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="310dp"
        android:background="@null"
        android:contentDescription="@string/nolimits"
        android:padding="20dp"
        android:src="@drawable/nolimitsxml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cman"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="370dp"
        android:background="@null"
        android:padding="20dp"
        android:src="@drawable/cmanxml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/kodi64"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="545dp"
        android:layout_marginTop="405dp"
        android:background="@android:color/transparent"
        android:text="@string/download_kodi_arm64_v8a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kodi32"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="545dp"
        android:layout_marginTop="455dp"
        android:background="@android:color/transparent"
        android:text="@string/download_kodi_armeabi_v7a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/readme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="436dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/image"
        android:src="@drawable/readmexml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/menu2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/builds"
        android:src="@drawable/menu2xml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cman" />

    <ProgressBar
        android:id="@+id/bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="600dp"
        android:layout_height="20dp"
        android:layout_marginEnd="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kodibanner" />

</androidx.constraintlayout.widget.ConstraintLayout>
